examples/fail/from_import_symbol_missing.hax
module Fail::FromImportSymbolMissing;

from ZZZ::HasExports import MissingThing;

sub main() -> Int {
  return 0;
}
